# mace-reforge

./: .gitignore  CLAUDE.md
client/: Cargo.toml  Trunk.toml  index.html  style.css
client/src/: api.rs  closed_question.rs  home.rs  lib.rs  open_question.rs  question.rs  shapes.rs  topic.rs  user_badge.rs
embedding-service/: .gitignore  README.md  embedding.service  requirements.txt  service.py  vec2text.service
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
