[package]
name = "mace-reforge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
mace-reforge-shared = { path = "../shared" }
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
awc = "3"
actix-ws = "0.3"
futures-util = "0.3"
